fixed font overlap on narrow screens

--- a/styl/_digital.styl
+++ b/styl/_digital.styl
@@ -1,9 +1,11 @@
 .time__digital
+  body {
+    font-size 5em
+  }
   &__time
-    font-size 7vmin
+    font normal normal 400 5rem "Raleway", sans-serif
   &__date
-    margin-top 2vmin
-    font-size 3vmin
+    font normal normal 400 3vmin "Raleway", sans-serif
 
   &__centered
     position absolute
